- [Bugfix] Synchronisation does not transfer files with equal size (#3100)
- [Bugfix] Selection in synchronize prompt (#3901)
- [Bugfix] Bonjour bookmarks ignore TXT record with path and credentials attributes (#3984)
- [Bugfix] Donation prompt cannot be supressed (#3937)
- [Bugfix] Error when uploading file with different display name from real filename (#4041)

3.3 (Nov-13-2009) [http://trac.cyberduck.ch/query?status=closed&milestone=3.3]
- [Feature] Octal input field for permissions [#13]
- [Bugfix] Connect to default bookmark for new browser window [#3798]
- [Bugfix] Excessive Growl notifications [#2388]
- [Bugfix] Icon set explicitly for every downloaded file [#3824]

3.3b4 (Oct-09-2009)
- [Bugfix] Fails to launch with Japanese locale
- [Bugfix] Duplicate files in browser listing when sorting by modification date [#3745]
- [Bugfix] Wrong menu item font size [#3736]
- [Bugfix] Various bugfixes
- [Feature] Toolbar interface for Info window
- [Feature] CDN Log Retention (Rackspace Cloud Files)

3.3b3 (Sep-21-2009)
- [Feature] PPC support again available
- [Bugfix] Some localizations broken [#3648]
- [Bugfix] Various bugfixes

3.3b2 (Sep-05-2009)
- [Feature] 64-bit support
- [Bugfix] Various bugfixes

3.3b1 (Aug-28-2009)
- [Bugfix] Incompatibility with Mac OS X 10.6 (Snow Leopard) [#3039]
- [Feature] New application icon (Thanks to Dietmar Kerschner)

3.2.1 (Jul-14-2009) [http://trac.cyberduck.ch/query?status=closed&milestone=3.2.1]
- [Feature] Create placeholder objects for virtual directory (S3)
- [Feature] Info window displays signed temporary public URL with a default validity of 24 hours (S3)
- [Feature] Info window displays BitTorrent URL of file (S3)
- [Feature] Option to enable Bucket Access Logging in the Info window (S3)
- [Feature] Option to enable CloudFront Access Logging in the Info window (S3)
- [Feature] Updated to Cloudfront API Version 2009-04-02 (S3)
- [Feature] Access third party buckets using anonymous login (S3)