@@ -44,6 +44,11 @@
         <li>[Bugfix] Error when uploading file with different display name from real filename (<a
                 href="http://trac.cyberduck.ch/ticket/4041">#4041</a>)
         </li>
+        <li>[Bugfix] Quick Connect needs extra keystroke to connect (<a href="http://trac.cyberduck.ch/ticket/3801">#3801</a>)
+        </li>
+        <li>[Bugfix] Password in non-default keychain are copied to login keychain (<a
+                href="http://trac.cyberduck.ch/ticket/2878">#2878</a>)
+        </li>
     </ul>
 </div>
 
